[package]
name = "csgohack"
version = "0.1.0"
authors = ["pepej <gamzan127@gmail.com>", "Radviger <Radviger@gmail.com>"]
build = "build.rs"
edition = "2018"


[dependencies]
[target.'cfg(windows)'.build-dependencies]
winres = "*"

[target.'cfg(windows)'.dependencies]
winapi = { git = "https://github.com/PepejHa4ker/winapi-rs", branch = "0.3", features = ["wincon", "basetsd", "winuser", "psapi", "windef", "minwindef", "memoryapi", "tlhelp32", "winnt", "ntdef", "errhandlingapi", "handleapi", "libloaderapi", "processthreadsapi", "winbase", "impl-default", "securitybaseapi", "wow64apiset"] }
backtrace = { git = "https://github.com/Radviger/backtrace-rs", features = ["cpp_demangle"] }
wio = "*"
cgmath = "*"
nom = "4.2.3"
log = "0.4.8"
simplelog = "0.7.4"
failure = "0.1.6"
regex = "1.3.4"
clipboard = "*"
glium = { version = "*", default-features = true }
gfx = "0.18"
gfx_device_gl = "0.16"
glutin = "0.26"
winit = "0.24.0"
imgui = "0.6.1"
imgui-gfx-renderer = "*"
imgui-winit-support = "*"
old_school_gfx_glutin_ext = "0.26"

chrono = { version = "0.4.10", features = ["serde"] }
arrayvec = "0.4"
bitflags = "1.0"
bv = "0.11"
itertools = "0.8"
thiserror = "1.0"
lzma-rs = "0.1.3"
binread = "1.0"
parse-display = "0.1.2"
static_assertions = "1.1.0"

[target.'cfg(windows)'.dev-dependencies]
gfx_device_dx11 = "0.8"
gfx_window_dxgi = "0.19"
