[package]
name = "csgohack"
version = "1.0.0"
authors = ["pepej <gamzan127@gmail.com>", "Radviger <Radviger@gmail.com>"]
edition = "2018"
build = "build.rs"

[package.metadata.docs.rs]
all-features = true


[target.'cfg(windows)'.build-dependencies]
winres = "*"

[dependencies]
winapi = { git = "https://github.com/PepejHa4ker/winapi-rs", branch = "0.3", features = ["wincon", "basetsd", "winuser", "psapi", "windef", "minwindef", "memoryapi", "tlhelp32", "winnt", "ntdef", "errhandlingapi", "handleapi", "libloaderapi", "processthreadsapi", "winbase", "impl-default", "securitybaseapi", "wow64apiset"] }
wio = "*"
cgmath = "*"
nom = "4.2.3"
log = "0.4.8"
simplelog = "0.7.4"
failure = "0.1.6"
regex = "1.3.4"
dirs = "*"
clipboard = "*"
eframe = { git = "https://github.com/PepejHa4ker/egui" }
serde = { version = "1.0.126", features = ["derive"]}
serde_json = "1.0.66"

chrono = { version = "0.4.10", features = ["serde"] }
arrayvec = "0.4"
bitflags = "1.0"
itertools = "0.8"
bv = "0.11"
thiserror = "1.0"
lzma-rs = "0.1.3"
binread = "1.0"
parse-display = "0.1.2"
static_assertions = "1.1.0"

